Text-overflow: ellipsis for fixtures items

--- a/source/styles/pages/event/b_event_rivals.scss
+++ b/source/styles/pages/event/b_event_rivals.scss
@@ -46,5 +46,7 @@
   width: 100%;
   text-align: center;
   min-height: 15px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
