--- a/source/styles/ui/forms/b_page_message.scss
+++ b/source/styles/ui/forms/b_page_message.scss
@@ -17,6 +17,6 @@
 }
 .bPageMessage .eForm_fieldSet{
   padding: 0;
-  margin-left: 10px;
   display: flex;
+  justify-content: center;
 }
